// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppliedGiftCards should render correctly for empty state 1`] = `
<Styled(BodyCopy)
  className=" applied-gift-cards"
  color="text.primary"
  component="div"
  fontFamily="primary"
  fontSize={12}
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  link={null}
  textAlign="left"
/>
`;

exports[`AppliedGiftCards should render correctly for filled state 1`] = `
<Styled(BodyCopy)
  className=" applied-gift-cards"
  color="text.primary"
  component="div"
  fontFamily="primary"
  fontSize={12}
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  link={null}
  textAlign="left"
>
  <Styled(BodyCopy)
    className="applied-gift-card"
    color="gray[700]"
    component="div"
    fontFamily="secondary"
    fontSize="fs16"
    fontWeight="regular"
    key="1"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    ending in 4321 | Remaining Balance: $0.00
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="applied-gift-card"
    color="gray[700]"
    component="div"
    fontFamily="secondary"
    fontSize="fs16"
    fontWeight="regular"
    key="2"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    ending in 1234 | Remaining Balance: $15.00
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="headsup-container"
    color="text.primary"
    component="p"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className={null}
      color="gray[900]"
      component="span"
      fontFamily="secondary"
      fontSize="fs16"
      fontWeight="extrabold"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      Heads Up!
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className={null}
      color="gray[900]"
      component="span"
      fontFamily="secondary"
      fontSize="fs16"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
       Please keep you Gift Card until you receive the item(s) purchased.
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
</Styled(BodyCopy)>
`;
